# calcTest

./: .gitignore  .pylintrc  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  run_ci_checks.sh
.github/workflows/: ci.yml
src/calculator/: __init__.py  config.py  operations.py
tests/: test_config.py  test_operations.py
